dnl $Id: configure.in,v 1.4 2001/08/18 02:34:06 mdb Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)

dnl Version definitions
LKP_MAJOR=1
LKP_REVISION=0
LKP_PATCHLEVEL=fcs
LKP_RELEASE=1
use_release=no

dnl LKP_RELEASE must be specified (1 if nothing else), but
dnl change use_release depending on whether we want it to be
dnl appended to our official version. (no usually, yes for
dnl something like 'pre1' or 'beta4')

if test x"$use_release" = xno ; then
	brsffx=
else
	brsffx="-${LKP_RELEASE}"
fi

LKP_SHORT_VERSION="$LKP_MAJOR.$LKP_REVISION.${LKP_PATCHLEVEL}"
LKP_VERSION="$LKP_MAJOR.$LKP_REVISION.${LKP_PATCHLEVEL}${brsffx}"
VERSION="$LKP_VERSION"

dnl Now that we have a version
AM_INIT_AUTOMAKE(lookuplet, [$VERSION])

AM_MAINTAINER_MODE
AM_ACLOCAL_INCLUDE(macros)
AC_ISC_POSIX

GNOME_INIT(applets)

dnl Check for programs
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_LIBTOOL

dnl this should come after `AC_PROG_CC'
GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strcspn strstr)

dnl All the linguas, all the time.
ALL_LINGUAS="az ca cs da de en_GB el es et fi fr ga hu it ja ko lt nl no nn pl pt pt_BR ro ru sk sl sv tr uk wa zh_CN.GB2312"
LINGUAS="$ALL_LINGUAS"
AM_GNOME_GETTEXT

dnl Create files.
AC_OUTPUT([
Makefile
macros/Makefile
intl/Makefile
src/Makefile
])
