# generated 2002/12/1 21:01:25 PST by mdb@baltic.(none)
# using glademm V1.1.3c_cvs

AC_INIT(src/lookuplet.cc)
AM_INIT_AUTOMAKE(lookuplet, 0.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

# GNOME--:
# (These macros are in the 'macros' directory)
# GNOME_INIT sets the GNOME_CONFIG variable, among other things:
GNOME_INIT
GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS
AC_LANG_CPLUSPLUS

GNOMEMM_CFLAGS="`pkg-config --cflags libgnomemm-2.0 libgnomeuimm-2.0`" 
GNOMEMM_LIBS="`pkg-config --libs libgnomemm-2.0 libgnomeuimm-2.0`"
AC_SUBST(GNOMEMM_CFLAGS)
AC_SUBST(GNOMEMM_LIBS)

AC_OUTPUT(Makefile src/Makefile )
